DROOLS-3330: merge background and font set DMN properties
For more details see:
- https://issues.redhat.com/browse/DROOLS-3330

--- a/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants.properties
@@ -69,15 +69,21 @@ org.kie.workbench.common.dmn.api.definition.model.ConstraintType.none=None
 org.kie.workbench.common.dmn.api.definition.model.ConstraintType.selectType=Select a type
 
 #######################
-# Background property
+# Styling property
 #######################
-org.kie.workbench.common.dmn.api.property.background.BackgroundSet.label=Background details
-org.kie.workbench.common.dmn.api.property.background.BgColour.label=Background colour
-org.kie.workbench.common.dmn.api.property.background.BgColour.description=The background colour
-org.kie.workbench.common.dmn.api.property.background.BorderColour.label=Border colour
-org.kie.workbench.common.dmn.api.property.background.BorderColour.description=The border colour
-org.kie.workbench.common.dmn.api.property.background.BorderSize.label=Border thickness
-org.kie.workbench.common.dmn.api.property.background.BorderSize.description=The border thickness
+org.kie.workbench.common.dmn.api.property.styling.StylingSet.label=Styling details
+org.kie.workbench.common.dmn.api.property.styling.BgColour.label=Background colour
+org.kie.workbench.common.dmn.api.property.styling.BgColour.description=The background colour
+org.kie.workbench.common.dmn.api.property.styling.BorderColour.label=Border colour
+org.kie.workbench.common.dmn.api.property.styling.BorderColour.description=The border colour
+org.kie.workbench.common.dmn.api.property.styling.BorderSize.label=Border thickness
+org.kie.workbench.common.dmn.api.property.styling.BorderSize.description=The border 
+org.kie.workbench.common.dmn.api.property.styling.FontColour.label=Font colour
+org.kie.workbench.common.dmn.api.property.styling.FontColour.description=The fonts colour
+org.kie.workbench.common.dmn.api.property.styling.FontFamily.label=Font family
+org.kie.workbench.common.dmn.api.property.styling.FontFamily.description=The fonts family
+org.kie.workbench.common.dmn.api.property.styling.FontSize.label=Font size
+org.kie.workbench.common.dmn.api.property.styling.FontSize.description=The fonts size
 
 #######################
 # Dimensions property
@@ -114,19 +120,6 @@ org.kie.workbench.common.dmn.api.property.dmn.TextFormat.description=Text MIME t
 org.kie.workbench.common.dmn.api.property.dmn.DocumentationLinksHolder.label=Documentation Links
 org.kie.workbench.common.dmn.api.property.dmn.DocumentationLinksHolder.description=External documentation items for the shape
 org.kie.workbench.common.dmn.api.property.dmn.DecisionServiceParametersListSet.label=Decision Service details
-
-#######################
-# Font property
-#######################
-org.kie.workbench.common.dmn.api.property.font.FontSet.label=Font settings
-org.kie.workbench.common.dmn.api.property.font.FontBorderSize.label=Font border thickness
-org.kie.workbench.common.dmn.api.property.font.FontBorderSize.description=The fonts border thickness
-org.kie.workbench.common.dmn.api.property.font.FontColour.label=Font colour
-org.kie.workbench.common.dmn.api.property.font.FontColour.description=The fonts colour
-org.kie.workbench.common.dmn.api.property.font.FontFamily.label=Font family
-org.kie.workbench.common.dmn.api.property.font.FontFamily.description=The fonts family
-org.kie.workbench.common.dmn.api.property.font.FontSize.label=Font size
-org.kie.workbench.common.dmn.api.property.font.FontSize.description=The fonts size
 
 #######################
 # DomainObject property
