--- a/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants_es.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants_es.properties
@@ -71,13 +71,13 @@ org.kie.workbench.common.dmn.api.definition.model.ConstraintType.selectType=Sele
 #######################
 # Background property
 #######################
-org.kie.workbench.common.dmn.api.property.background.BackgroundSet.label=Detalles de fondo
-org.kie.workbench.common.dmn.api.property.background.BgColour.label=Color de fondo
-org.kie.workbench.common.dmn.api.property.background.BgColour.description=El color de fondo
-org.kie.workbench.common.dmn.api.property.background.BorderColour.label=Color del borde
-org.kie.workbench.common.dmn.api.property.background.BorderColour.description=El color del borde
-org.kie.workbench.common.dmn.api.property.background.BorderSize.label=Espesor del borde
-org.kie.workbench.common.dmn.api.property.background.BorderSize.description=El espesor del borde
+org.kie.workbench.common.dmn.api.property.styling.StylingSet.label=Detalles de fondo
+org.kie.workbench.common.dmn.api.property.styling.BgColour.label=Color de fondo
+org.kie.workbench.common.dmn.api.property.styling.BgColour.description=El color de fondo
+org.kie.workbench.common.dmn.api.property.styling.BorderColour.label=Color del borde
+org.kie.workbench.common.dmn.api.property.styling.BorderColour.description=El color del borde
+org.kie.workbench.common.dmn.api.property.styling.BorderSize.label=Espesor del borde
+org.kie.workbench.common.dmn.api.property.styling.BorderSize.description=El espesor del borde
 
 #######################
 # Dimensions property
@@ -118,15 +118,15 @@ org.kie.workbench.common.dmn.api.property.dmn.DecisionServiceParametersListSet.l
 #######################
 # Font property
 #######################
-org.kie.workbench.common.dmn.api.property.font.FontSet.label=Configuración de la fuente
+org.kie.workbench.common.dmn.api.property.styling.FontSet.label=Configuración de la fuente
 org.kie.workbench.common.dmn.api.property.font.FontBorderSize.label=Espesor del borde de la fuente
 org.kie.workbench.common.dmn.api.property.font.FontBorderSize.description=El espesor del borde de la fuente
-org.kie.workbench.common.dmn.api.property.font.FontColour.label=Color de fuente
-org.kie.workbench.common.dmn.api.property.font.FontColour.description=El color de la fuente
-org.kie.workbench.common.dmn.api.property.font.FontFamily.label=Familia de fuentes
-org.kie.workbench.common.dmn.api.property.font.FontFamily.description=La familia de fuentes
-org.kie.workbench.common.dmn.api.property.font.FontSize.label=Tamaño de fuente
-org.kie.workbench.common.dmn.api.property.font.FontSize.description=El tamaño de la fuente
+org.kie.workbench.common.dmn.api.property.styling.FontColour.label=Color de fuente
+org.kie.workbench.common.dmn.api.property.styling.FontColour.description=El color de la fuente
+org.kie.workbench.common.dmn.api.property.styling.FontFamily.label=Familia de fuentes
+org.kie.workbench.common.dmn.api.property.styling.FontFamily.description=La familia de fuentes
+org.kie.workbench.common.dmn.api.property.styling.FontSize.label=Tamaño de fuente
+org.kie.workbench.common.dmn.api.property.styling.FontSize.description=El tamaño de la fuente
 
 #######################
 # DomainObject property
