DROOLS-3442: Rename DMN 'Name' to 'DMN Model Name'
For more details see:
- https://issues.redhat.com/browse/DROOLS-3442

--- a/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants.properties
@@ -1,4 +1,9 @@
 #######################
+# Definitions
+#######################
+org.kie.workbench.common.dmn.api.definition.model.Definitions.nameHolder=DMN Model Name
+
+#######################
 # DefinitionSet
 #######################
 org.kie.workbench.common.dmn.api.DMNDefinitionSet.description=DMN
