--- a/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants_fr.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants_fr.properties
@@ -1,4 +1,9 @@
 #######################
+# Definitions
+#######################
+org.kie.workbench.common.dmn.api.definition.model.Definitions.nameHolder=Nom du modèle DMN 
+
+#######################
 # DefinitionSet
 #######################
 org.kie.workbench.common.dmn.api.DMNDefinitionSet.description=DMN
