added new i18n files

--- a/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants_es.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants_es.properties
@@ -1,4 +1,9 @@
 #######################
+# Definitions
+#######################
+org.kie.workbench.common.dmn.api.definition.model.Definitions.nameHolder=Nombre del modelo DMN
+
+#######################
 # DefinitionSet
 #######################
 org.kie.workbench.common.dmn.api.DMNDefinitionSet.description=DMN
@@ -69,15 +74,21 @@ org.kie.workbench.common.dmn.api.definition.model.ConstraintType.none=Ninguno
 org.kie.workbench.common.dmn.api.definition.model.ConstraintType.selectType=Seleccionar un tipo
 
 #######################
-# Background property
+# Styling property
 #######################
-org.kie.workbench.common.dmn.api.property.background.BackgroundSet.label=Detalles de fondo
-org.kie.workbench.common.dmn.api.property.background.BgColour.label=Color de fondo
-org.kie.workbench.common.dmn.api.property.background.BgColour.description=El color de fondo
-org.kie.workbench.common.dmn.api.property.background.BorderColour.label=Color del borde
-org.kie.workbench.common.dmn.api.property.background.BorderColour.description=El color del borde
-org.kie.workbench.common.dmn.api.property.background.BorderSize.label=Espesor del borde
-org.kie.workbench.common.dmn.api.property.background.BorderSize.description=El espesor del borde
+org.kie.workbench.common.dmn.api.property.styling.StylingSet.label=Detalles de estilo
+org.kie.workbench.common.dmn.api.property.styling.BgColour.label=Color de fondo
+org.kie.workbench.common.dmn.api.property.styling.BgColour.description=El color de fondo
+org.kie.workbench.common.dmn.api.property.styling.BorderColour.label=Color del borde
+org.kie.workbench.common.dmn.api.property.styling.BorderColour.description=El color del borde
+org.kie.workbench.common.dmn.api.property.styling.BorderSize.label=Espesor del borde
+org.kie.workbench.common.dmn.api.property.styling.BorderSize.description=La frontera 
+org.kie.workbench.common.dmn.api.property.styling.FontColour.label=Color de fuente
+org.kie.workbench.common.dmn.api.property.styling.FontColour.description=El color de la fuente
+org.kie.workbench.common.dmn.api.property.styling.FontFamily.label=Familia de fuentes
+org.kie.workbench.common.dmn.api.property.styling.FontFamily.description=La familia de fuentes
+org.kie.workbench.common.dmn.api.property.styling.FontSize.label=Tamaño de fuente
+org.kie.workbench.common.dmn.api.property.styling.FontSize.description=El tamaño de la fuente
 
 #######################
 # Dimensions property
@@ -113,20 +124,7 @@ org.kie.workbench.common.dmn.api.property.dmn.TextFormat.label=Formato de texto
 org.kie.workbench.common.dmn.api.property.dmn.TextFormat.description=Tipo MIME de texto
 org.kie.workbench.common.dmn.api.property.dmn.DocumentationLinksHolder.label=Enlaces de documentación
 org.kie.workbench.common.dmn.api.property.dmn.DocumentationLinksHolder.description=Ítems de documentación externos para la forma
-org.kie.workbench.common.dmn.api.property.dmn.DecisionServiceParametersListSet.label=Servicio de decisión
-
-#######################
-# Font property
-#######################
-org.kie.workbench.common.dmn.api.property.font.FontSet.label=Configuración de la fuente
-org.kie.workbench.common.dmn.api.property.font.FontBorderSize.label=Espesor del borde de la fuente
-org.kie.workbench.common.dmn.api.property.font.FontBorderSize.description=El espesor del borde de la fuente
-org.kie.workbench.common.dmn.api.property.font.FontColour.label=Color de fuente
-org.kie.workbench.common.dmn.api.property.font.FontColour.description=El color de la fuente
-org.kie.workbench.common.dmn.api.property.font.FontFamily.label=Familia de fuentes
-org.kie.workbench.common.dmn.api.property.font.FontFamily.description=La familia de fuentes
-org.kie.workbench.common.dmn.api.property.font.FontSize.label=Tamaño de fuente
-org.kie.workbench.common.dmn.api.property.font.FontSize.description=El tamaño de la fuente
+org.kie.workbench.common.dmn.api.property.dmn.DecisionServiceParametersListSet.label=Detalles del Servicio de Decisiones
 
 #######################
 # DomainObject property
