--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants_es.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants_es.properties
@@ -68,7 +68,7 @@ ParametersPopoverViewImpl.addParameter=Agregar parámetro
 DecisionTableEditor.InsertRuleAnnotationClauseLeft=Insertar a la izquierda
 DecisionTableEditor.InsertRuleAnnotationClauseRight=Insertar a la derecha
 DecisionTableEditor.DeleteRuleAnnotationClause=Eliminar
-DecisionTableEditor.RuleAnnotationClauseHeader=agregar anotación
+DecisionTableEditor.RuleAnnotationClauseHeader=Anotación de reglas
 DecisionTableEditor.SelectRuleAnnotationName=Nombre de la anotación de la regla
 DecisionTableEditor.DescriptionColumnHeader=Descripción
 DecisionTableEditor.InputClauseHeader=Cláusula de entrada
@@ -114,11 +114,11 @@ DataTypeListItemView.ArrowKeysTooltip=Usar las teclas de flecha para navegar por
 DataTypeListView.Title=Tipos de datos personalizados
 DataTypeListView.NoCustomDataTitle=No definieron tipos de datos personalizados.
 DataTypeListView.NoCustomData1=Los tipos de datos están referenciados en los valores de entrada y salida de las tablas de decisión. Los tipos de datos personalizados permiten hacer referencia a tipos de datos más complejos, más allá de los tipos simples "por defecto".
-DataTypeListView.NoCustomData2=Actualmente no hay tipos de datos personalizados disponibles para Para comenzar, agregue un tipo de dato personalizados.
-DataTypeListView.AddACustomDataType=Tipos de datos personalizados
+DataTypeListView.NoCustomData2=Actualmente, no hay tipos de datos personalizados disponibles para ver o editar. Para comenzar, agregue un tipo de dato personalizados.
+DataTypeListView.AddACustomDataType=Añadir un tipo de datos personalizado
 DataTypeListView.NoCustomDataTypesFound1=No se encontraron tipos de datos personalizados.
 DataTypeListView.NoCustomDataTypesFound2=Pruebe con un nombre de tipo de datos diferente.
-DataTypeListView.NewDataType=El tipo de datos
+DataTypeListView.NewDataType=Nuevo tipo de datos
 DataTypeListView.ExpandAll=Ampliar todo
 DataTypeListView.CollapseAll=Contraer todo
 DataTypeListView.ReadOnlyMessage1=Esta lista contiene los tipos de datos en modo de solo lectura.
@@ -148,10 +148,10 @@ DataTypeListItemView.Edit=Editar (Ctrl + E)
 DataTypeListItemView.Save=Guardar (Ctrl + S)
 DataTypeListItemView.AddRowBelow=Añadir fila abajo (Ctrl + B)
 DataTypeListItemView.Remove=Eliminar (Ctrl + Retroceso)
-DataTypeListItemView.Cancel=Cancelar trabajo
+DataTypeListItemView.Cancel=Cancelar (Esc)
 DataTypesPage.Title=Tipos de datos
 IncludedModelsPage.Title=Modelos incluidos
-DataTypeSearchBarView.Search=No hay tipos de datos.
+DataTypeSearchBarView.Search=Búsqueda de tipos de datos
 DataTypeConstraintView.AddConstraints=Agregar limitaciones
 DataTypeConstraintView.ConstraintsTooltip=Agregar restricciones para limitar y definir la entrada válida para el tipo de datos
 DataTypeConstraintModalView.BodyParagraph1=Agregar restricciones para limitar y definir la entrada válida para el 
@@ -184,7 +184,7 @@ DataTypeConstraintRangeView.IncludeEndValue=Incluir el valor final
 DataTypeConstraintRangeView.RequiredValue=* Un rango tiene un valor inicial y un valor final, ambos valores de campo son necesarios.
 DataTypeConstraintRangeView.ProTip=El valor en cada extremo del rango puede incluirse o excluirse de la definición del rango. Si la casilla de verificación está desactivada, se excluye el valor inicial o final.
 ConstraintPlaceholderHelper.SentenceDate=Ejemplo de expresión para un tipo de datos de "fecha": (date("2019-02-01")..date("2019-02-28"))
-ConstraintPlaceholderHelper.SentenceNumber=Ejemplo de expresión para un tipo de datos "numéricos":
+ConstraintPlaceholderHelper.SentenceNumber=Ejemplo de expresión para un tipo de dato "número": (1..10)
 ConstraintPlaceholderHelper.SentenceString=Ejemplo de expresión para un tipo de datos "cadena": "manzana", "naranja", "piña"
 ConstraintPlaceholderHelper.SentenceDayTimeDuration=Ejemplo de expresión para un tipo de datos de "días y duración del tiempo" (donde PT10S representa 10 segundos y PT30M representa 30 minutos): (duration("PT10S")..duration("PT30M"))
 ConstraintPlaceholderHelper.SentenceYearMonthDuration=Ejemplo de expresión para un tipo de datos de "duración de años y meses" (donde P2M representa 2 meses y P2Y representa 2 años): (duration("P2M")..duration("P2Y"))
@@ -288,11 +288,11 @@ ImportDataObjectModalView.Import=Importar
 ImportDataObjectModalView.ClearSelection=Anular selección
 ImportDataObjectModalView.ProjectDataObjects=Objetos de datos del proyecto
 ImportDataObjectModalView.DataTypeWithSameNameFound=Ya existe un tipo de datos DMN con el mismo nombre. Si procede, se sobrescribirá.
-DRDActions.ContextMenu.Title=Agregar acciones
+DRDActions.ContextMenu.Title=Acciones de DRD
 DRDActions.ContextMenu.Actions.Create=Crear
 DRDActions.ContextMenu.Actions.AddTo=Añadir a
 DRDActions.ContextMenu.Actions.Remove=Quitar
-DRDNameChangerView.ReturnToDRGMessage=Ver la diferencia
+DRDNameChangerView.ReturnToDRGMessage=Ver DRG
 DRDNameChangerView.DRDDescriptionMessage=(Diagrama de requisitos de decisión)
 DecisionServiceParameters.Inputs=Datos de entrada
 DecisionServiceParameters.Outputs=Decisiones de salida
@@ -300,7 +300,7 @@ DecisionServiceParameters.EncapsulatedDecisions=Decisiones encapsuladas
 ParameterGroup.None=Ninguno
 DataTypeSelectView.Structure=Estructura
 StructureTypesTooltipView.DescriptionStructured="{0}" es un tipo de datos estructurado con \ {1\} campos.
-StructureTypesTooltipView.DescriptionCustom=Tipos de datos personalizados
+StructureTypesTooltipView.DescriptionCustom="{0}" es un tipo de dato personalizado.
 StructureTypesTooltipView.DescriptionIncluded="{0}" es un tipo de dato externo de un modelo incluido.
 StructureTypesTooltipView.ViewDataType=Ver este tipo de datos
 StructureTypesTooltipView.Structure=Estructura
