--- a/kie-wb-common-forms/kie-wb-common-forms-editor/kie-wb-common-forms-editor-client/src/main/resources/org/kie/workbench/common/forms/editor/client/resources/i18n/FormEditorConstants_es.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-editor/kie-wb-common-forms-editor-client/src/main/resources/org/kie/workbench/common/forms/editor/client/resources/i18n/FormEditorConstants_es.properties
@@ -58,14 +58,14 @@ ChangesNotificationDisplayer.title=Notificación: Hay algunos cambios en su form
 NewPropertiesDisplayerViewIpml.newFormFieldsAvailable=Nuevo(s) campo(s) de formulario disponible(s):
 
 ConflictsDisplayerViewIpml.conflicts=Los siguientes campos tienen problemas que deben resolverse:
-ModelProperty.removed1=Se ha quitado la propiedad del modelo que estaba ligada a (''{0}'').
+ModelProperty.removed1=: La propiedad del modelo que estaba vinculada (''{0}'') ha sido eliminada.
 ModelProperty.removed2=El campo no se quitará del formulario, pero se modificará la vinculación para evitar problemas. Edite las propiedades del campo y vincúlelo a una propiedad existente.
-ModelProperty.typeConflict1=La propiedad del modelo a la que estaba vinculada (''{0}'') ha cambiado el tipo a un tipo que no admite el campo del formulario.
+ModelProperty.typeConflict1=: La propiedad del modelo a la que estaba vinculada (''{0}'') ha cambiado el tipo a uno que el campo del formulario no admite.
 ModelProperty.typeConflict2=El campo del formulario se cambiará al tipo de campo correcto. Edite las propiedades de los campos y compruebe que los ajustes sean los correctos.
 
-NestedFormsConflictHandler.nestedForm=El campo SubForm está configurado para usar un formulario que no existe.
-NestedFormsConflictHandler.creationForm=El campo MultipleSubForm está tratando de usar un formulario para la creación de instancias que no existe.
-NestedFormsConflictHandler.editionForm=El campo MultipleSubForm está tratando de usar un formulario para la edición de instancias que no existe.
+NestedFormsConflictHandler.nestedForm=: El campo SubForm está configurado para utilizar un formulario que no existe.
+NestedFormsConflictHandler.creationForm=: El campo MultipleSubForm está intentando utilizar un formulario para la creación de instancias que no existe.
+NestedFormsConflictHandler.editionForm=: El campo MultipleSubForm está intentando utilizar un formulario para la edición de instancias que no existe.
 NestedFormsConflictHandler.fix=La configuración de los campos se modificará para evitar problemas; edite el campo y seleccione el formulario correcto.
 
 showMore=Mostrar detalles
