--- a/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-jbpm-integration/kie-wb-common-forms-jbpm-integration-client/src/main/resources/org/kie/workbench/common/forms/jbpm/client/resources/i18n/Constants_es.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-jbpm-integration/kie-wb-common-forms-jbpm-integration-client/src/main/resources/org/kie/workbench/common/forms/jbpm/client/resources/i18n/Constants_es.properties
@@ -30,6 +30,6 @@ DocumentUploadViewImpl.dropFilesHere=Suelte los archivos aquí
 DocumentUploadViewImpl.maxDocuments= Máx: {0} archivos
 DocumentUploadViewImpl.upload=Cargar
 
-DocumentListFieldRenderer.maxContentLengthWarning=El tamaño del contenido que se cargó podría ser demasiado grande ({0}) y causar problemas al transferir el contenido de los documentos.
+DocumentListFieldRenderer.maxContentLengthWarning=Advertencia: El tamaño del contenido subido puede ser demasiado grande ({0}) y puede causar problemas al transferir el contenido de los documentos.
 
 DocumentListFieldRenderer.maxDocumentsReached=La cantidad de documentos permitida es de {0}.
