--- a/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-client/src/main/resources/org/kie/workbench/common/screens/archetype/mgmt/client/resources/i18n/ArchetypeManagementConstants_es.properties
+++ b/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-client/src/main/resources/org/kie/workbench/common/screens/archetype/mgmt/client/resources/i18n/ArchetypeManagementConstants_es.properties
@@ -26,7 +26,7 @@ ArchetypeManagement.ArchetypeDeletedMessage=El arquetipo se eliminó correctamen
 ArchetypeManagement.ArchetypeValidatedMessage=El arquetipo se validó correctamente.
 ArchetypeManagement.ArchetypeAlreadyExistsMessage=Ya existe un arquetipo agregado con la información proporcionada.
 ArchetypeManagement.InvalidArchetypeExceptionMessage=El arquetipo que se informó no puede agregarse porque no es un módulo KIE válido.
-ArchetypeManagement.MavenExecutionExceptionMessage=Detalles del error
+ArchetypeManagement.MavenExecutionExceptionMessage=Detalles del error: {0}
 ArchetypeManagement.DeleteArchetypeTitle=Eliminar arquetipo
 ArchetypeManagement.DeleteArchetypeMessage=¿Está seguro de que desea eliminar permanentemente este arquetipo? Esta acción no puede deshacerse.
 ArchetypeManagement.OfN=de {0}
