--- a/kie-wb-common-screens/kie-wb-common-data-modeller/kie-wb-common-data-modeller-client/src/main/resources/org/kie/workbench/common/screens/datamodeller/client/resources/i18n/Constants_es.properties
+++ b/kie-wb-common-screens/kie-wb-common-data-modeller/kie-wb-common-data-modeller-client/src/main/resources/org/kie/workbench/common/screens/datamodeller/client/resources/i18n/Constants_es.properties
@@ -128,7 +128,7 @@ objectEditor_durationLabel=Duración
 objectEditor_durationHelp=Establece la duración de un evento. Si se establece, el usuario puede declarar cuál de los atributos del evento contiene la duración del evento. Si no, por defecto todos los eventos tienen una duración 0. (Ver fusión de drools)
 
 objectEditor_expiresLabel=Expira
-objectEditor_expiresHelp=Establece el "timeOffset" para la expiración de un evento. Si se configura, este valor debe ser un intervalo temporal en el formulario:</BR>&nbsp;&nbsp;[#d][#h][#m][#s][#[ms]]</BR>Donde [ ] significa un parámetro opcional y # significa un valor numérico.</BR>ej.: (Ver fusión de drools)
+objectEditor_expiresHelp=Establece el "timeOffset" para la expiración de un evento.Si se establece, este valor debe ser un intervalo temporal de la forma:</BR>&nbsp;&nbsp;[#d][#h][#m][#s][#[ms]]</BR>Donde [ ] significa un parámetro opcional y # significa un valor numérico.</BR>e.g: 1d2h, significa un día y dos horas. (Ver fusión de drools)
 
 objectEditor_remotableLabel=Remoto
 objectEditor_remotableHelp=Marque esta clase para ponerla a disposición de los servicios remotos de jBPM. (REST, JMS y WS, Ver jBPM)
@@ -201,9 +201,9 @@ validation_error_position_greater_or_equal_than_and_lower_than=La posición "{0}
 advanced_domain_screen_name=Avanzado
 
 advanced_domain_wizard_title=Agregar nueva anotación
-advanced_domain_wizard_search_page_title=agregar anotación
+advanced_domain_wizard_search_page_title=Cargar anotación
 advanced_domain_wizard_search_page_search_field=Nombre de la clase de anotación
-advanced_domain_wizard_search_page_search_field_place_holder=Nombre de la clase de anotación
+advanced_domain_wizard_search_page_search_field_place_holder=cargar el nombre de la clase de anotación
 advanced_domain_wizard_search_page_search_button_tooltip=Haga clic en el botón de búsqueda para cargar la definición de la anotación.
 advanced_domain_wizard_search_page_message_annotation_not_loaded=No está cargada la definición de la anotación.
 advanced_domain_wizard_search_page_message_annotation_is_loaded=La definición de la anotación se cargó correctamente.
