--- a/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/DefaultWorkbenchConstants_es.properties
+++ b/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/DefaultWorkbenchConstants_es.properties
@@ -85,11 +85,11 @@ ProcessAdministration=Administración del proceso
 TestReport=Informe de prueba
 EditProfilePreferences=Editar las preferencias del perfil
 EditProfilePreferencesHelp=Permitir a los usuarios seleccionar el perfil que usará la mesa de trabajo
-CustomTasksAdministration=Administración de las tareas de servicio
+CustomTasksAdministration=Administración de tareas personalizadas
 DataTransfer=Transferencia de datos de Dashbuilder
 AccessDataTransfer=Acceso a la transferencia de datos del Dashbuilder
 AccessDataTransferHelp=Permiso para importar y exportar datos del dashbuilder (conjuntos de datos, perspectivas y navegación).
-ShowMetricsTab=Métrica del proyecto
+ShowMetricsTab=Mostrar la pestaña de métricas del proyecto
 ShowMetricsTabHelp=Permiso para mostrar la pestaña de métricas del proyecto
 ShowChangeRequestTab=Mostrar la ficha de solicitud de modificación del proyecto
 ShowChangeRequestTabHelp=Permiso para mostrar u ocultar la pestaña de solicitud de cambio del proyecto
