--- a/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants_es.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants_es.properties
@@ -2,8 +2,8 @@ ConfirmationDialogImplView.Yes=Sí
 ConfirmationDialogImplView.No=No
 
 DeleteNodeConfirmationDialogImpl.ConfirmationDescription=Todos los nodos {0} serán eliminados de todos los diagramas.
-DeleteNodeConfirmationDialogImpl.Question=¿Está seguro de que desea hacer esto?
-DeleteNodeConfirmationDialogImpl.Title=¿Está seguro de que desea quitar la pestaña {0}?
+DeleteNodeConfirmationDialogImpl.Question=¿Estás seguro de que quieres continuar?
+DeleteNodeConfirmationDialogImpl.Title=¿Estás seguro de que quieres eliminar esto?
 
 DefinitionPaletteGroupWidgetViewImpl.showMore=Más
 DefinitionPaletteGroupWidgetViewImpl.showLess=Menos
@@ -36,7 +36,7 @@ MarshallingMessage.childLaneSetConverted=El conjunto de líneas secundarias {0} 
 MarshallingMessage.convertedElement=El elemento {0} de tipo {1} se convirtió a {2}
 MarshallingMessage.elementFailure=Error en el elemento {0} de tipo {1}
 MarshallingMessage.dataObjectsSameNameDifferentType=Existe un objeto de datos con el mismo nombre y diferente tipo - Se cambiará a (objeto)
-MarshallingMessage.dataObjectWithName=Tipo de objeto de datos
+MarshallingMessage.dataObjectWithName=Datos Nombre-Objeto
 MarshallingMessage.dataObjectWithInvalidName=Existe un objeto de datos con un nombre no válido. Los caracteres ilegales serán sustituidos por -
 MarshallingMessage.reusableSubprocessWithoutDataIO=Subproceso reutilizable sin asignaciones Entrada de datos/Salida de datos
 
