--- a/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants_fr.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants_fr.properties
@@ -1,4 +1,9 @@
 #######################
+# Definitions
+#######################
+org.kie.workbench.common.dmn.api.definition.model.Definitions.nameHolder=Nom de modèle DMN
+
+#######################
 # DefinitionSet
 #######################
 org.kie.workbench.common.dmn.api.DMNDefinitionSet.description=DMN
@@ -69,15 +74,21 @@ org.kie.workbench.common.dmn.api.definition.model.ConstraintType.none=Aucun
 org.kie.workbench.common.dmn.api.definition.model.ConstraintType.selectType=Sélectionner un type
 
 #######################
-# Background property
+# Styling property
 #######################
-org.kie.workbench.common.dmn.api.property.background.BackgroundSet.label=Détails de l''arrière-plan
-org.kie.workbench.common.dmn.api.property.background.BgColour.label=Couleur d''arrière-plan
-org.kie.workbench.common.dmn.api.property.background.BgColour.description=Couleur de l''arrière-plan
-org.kie.workbench.common.dmn.api.property.background.BorderColour.label=Couleur de bordure
-org.kie.workbench.common.dmn.api.property.background.BorderColour.description=Couleur de la bordure
-org.kie.workbench.common.dmn.api.property.background.BorderSize.label=Épaisseur de bordure
-org.kie.workbench.common.dmn.api.property.background.BorderSize.description=Épaisseur de la bordure
+org.kie.workbench.common.dmn.api.property.styling.StylingSet.label=Détails du style
+org.kie.workbench.common.dmn.api.property.styling.BgColour.label=Couleur d''arrière-plan
+org.kie.workbench.common.dmn.api.property.styling.BgColour.description=Couleur de l''arrière-plan
+org.kie.workbench.common.dmn.api.property.styling.BorderColour.label=Couleur de bordure
+org.kie.workbench.common.dmn.api.property.styling.BorderColour.description=Couleur de la bordure
+org.kie.workbench.common.dmn.api.property.styling.BorderSize.label=Épaisseur de bordure
+org.kie.workbench.common.dmn.api.property.styling.BorderSize.description=Taille de la bordure 
+org.kie.workbench.common.dmn.api.property.styling.FontColour.label=Couleur de police
+org.kie.workbench.common.dmn.api.property.styling.FontColour.description=Couleur de la police
+org.kie.workbench.common.dmn.api.property.styling.FontFamily.label=Famille de polices
+org.kie.workbench.common.dmn.api.property.styling.FontFamily.description=Famille de polices de caractères
+org.kie.workbench.common.dmn.api.property.styling.FontSize.label=Taille de police
+org.kie.workbench.common.dmn.api.property.styling.FontSize.description=Taille de la police
 
 #######################
 # Dimensions property
@@ -114,19 +125,6 @@ org.kie.workbench.common.dmn.api.property.dmn.TextFormat.description=Type MIME d
 org.kie.workbench.common.dmn.api.property.dmn.DocumentationLinksHolder.label=Liens de documentation
 org.kie.workbench.common.dmn.api.property.dmn.DocumentationLinksHolder.description=Éléments de documentation externe pour la forme
 org.kie.workbench.common.dmn.api.property.dmn.DecisionServiceParametersListSet.label=Décision Détails du service
-
-#######################
-# Font property
-#######################
-org.kie.workbench.common.dmn.api.property.font.FontSet.label=Paramètres de police
-org.kie.workbench.common.dmn.api.property.font.FontBorderSize.label=Épaisseur de bordure des polices
-org.kie.workbench.common.dmn.api.property.font.FontBorderSize.description=Épaisseur de la bordure des polices
-org.kie.workbench.common.dmn.api.property.font.FontColour.label=Couleur de police
-org.kie.workbench.common.dmn.api.property.font.FontColour.description=Couleur de la police
-org.kie.workbench.common.dmn.api.property.font.FontFamily.label=Famille de polices
-org.kie.workbench.common.dmn.api.property.font.FontFamily.description=Famille de polices de caractères
-org.kie.workbench.common.dmn.api.property.font.FontSize.label=Taille de police
-org.kie.workbench.common.dmn.api.property.font.FontSize.description=Taille de la police
 
 #######################
 # DomainObject property
