--- a/kie-wb-common-screens/kie-wb-common-server-ui/kie-wb-common-server-ui-client/src/main/resources/org/kie/workbench/common/screens/server/management/client/resources/i18n/Constants_es.properties
+++ b/kie-wb-common-screens/kie-wb-common-server-ui/kie-wb-common-server-ui-client/src/main/resources/org/kie/workbench/common/screens/server/management/client/resources/i18n/Constants_es.properties
@@ -148,7 +148,7 @@ ContainerUpdateEvent.ErrorMessage=La operación "{0}" tuvo errores en {1} instan
 ContainerUpdateEvent.WarnMessage=Es probable que la operación "{0}" haya tenido errores en algunas de {1} instancia(s) del servidor.
 ContainerUpdateEvent.SuccessMessage=La operación "{0}" se realizó correctamente; se dañaron {1} instancias del servidor.
 NewContainer.GAVNotExist=GAV ''{0}'' no se encuentra en el repositorio de Maven.
-NewContainer.GAVNotExist.Save=GAV ''{0}'' no se encuentra en el repositorio de Maven. ¿Está seguro de que desea hacer esto? 
+NewContainer.GAVNotExist.Save=GAV ''{0}'' no se encuentra en el repositorio de Maven. ¿Estás seguro de que quieres desplegarlo? 
 NewContainer.Save=Aceptar
 NewContainer.SaveContainerSpec=Guardar la especificación del contenedor
 NewContainer.Deploying={0} está desplegando
