--- a/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-api/kie-wb-common-stunner-backend-api/src/main/resources/org/kie/workbench/common/stunner/core/marshaller/resources/i18n/MarshallingMessagesConstants_es.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-api/kie-wb-common-stunner-backend-api/src/main/resources/org/kie/workbench/common/stunner/core/marshaller/resources/i18n/MarshallingMessagesConstants_es.properties
@@ -17,9 +17,9 @@ MarshallingMessage.boundaryIgnored=Se ignoró la relación de límites. Elemento
 MarshallingMessage.associationIgnored=Se ignoró la asociación. Origen: {0}, Destino: {1}
 MarshallingMessage.sequenceFlowIgnored=Se ignoró el flujo de secuencias. Origen: {0}, Destino: {1}
 MarshallingMessage.collapsedElementExpanded=Se expandió el elemento contraído {0} de tipo {1\}
-MarshallingMessage.ignoredElement=Se ignoró el elemento {0} de tipo {1\}
-MarshallingMessage.ignoredUnknownElement=Se ignoró el elemento desconocido {0}
-MarshallingMessage.childLaneSetConverted=El conjunto de líneas secundarias {0} se convirtió a la línea {1}
+MarshallingMessage.ignoredElement=El elemento "{0}" de tipo {1} fue ignorado
+MarshallingMessage.ignoredUnknownElement=Se ha ignorado el elemento desconocido "{0}"
+MarshallingMessage.childLaneSetConverted=El conjunto de carriles infantiles {0} se ha convertido en un carril
 MarshallingMessage.convertedElement=El elemento {0} de tipo {1} se convirtió a {2}
 MarshallingMessage.elementFailure=Error en el elemento {0} de tipo {1}
 
