--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/src/main/resources/org/kie/workbench/common/stunner/bpmn/resources/i18n/StunnerBPMNConstants_es.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/src/main/resources/org/kie/workbench/common/stunner/bpmn/resources/i18n/StunnerBPMNConstants_es.properties
@@ -16,7 +16,7 @@ org.kie.workbench.common.stunner.bpmn.definition.BPMNCategories.IntermediateEven
 org.kie.workbench.common.stunner.bpmn.definition.BPMNCategories.EndEvents=Eventos finales
 org.kie.workbench.common.stunner.bpmn.definition.BPMNCategories.ConnectingObjects=Conectando objetos
 org.kie.workbench.common.stunner.bpmn.definition.BPMNCategories.Gateways=Puertas de enlace
-org.kie.workbench.common.stunner.bpmn.definition.BPMNCategories.CustomTasks=Tipo personalizado
+org.kie.workbench.common.stunner.bpmn.definition.BPMNCategories.CustomTasks=Tareas personalizadas
 org.kie.workbench.common.stunner.bpmn.definition.BPMNCategories.Artifacts=Artefactos
 org.kie.workbench.common.stunner.bpmn.definition.BPMNCategories.TextAnnotations=Anotación de texto
 
@@ -117,7 +117,7 @@ org.kie.workbench.common.stunner.bpmn.definition.IntermediateMessageEventCatchin
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateMessageEventCatching.description=La ejecución del proceso se retrasa hasta que se capta un mensaje determinado
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateSignalEventCatching.title=Señal intermedia
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateSignalEventCatching.description=La ejecución del proceso se retrasa hasta que se capta una señal determinada. La señalización puede aparecer a través de diferentes procesos
-org.kie.workbench.common.stunner.bpmn.definition.IntermediateLinkEventCatching.title=Error intermedio
+org.kie.workbench.common.stunner.bpmn.definition.IntermediateLinkEventCatching.title=Enlace intermedio
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateLinkEventCatching.description=Un evento de enlace es un mecanismo para conectar dos secciones de un proceso. Los eventos de enlace pueden utilizarse para crear situaciones de bucle o para evitar largas líneas de flujo de secuencia
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateErrorEventCatching.title=Error intermedio
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateErrorEventCatching.description=Captura un error con nombre, que fue lanzado por un alcance interno (por ejemplo, un subproceso). Este evento debe estar unido al límite de una actividad
@@ -127,7 +127,7 @@ org.kie.workbench.common.stunner.bpmn.definition.IntermediateCompensationEvent.t
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateCompensationEvent.description=Manejo de la compensación en caso de operaciones con errores parciales. Este evento debe estar unido al límite de una actividad
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateSignalEventThrowing.title=Señal intermedia
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateSignalEventThrowing.description=El evento de lanzamiento de señales emite una señal. Después, continúa la ejecución del proceso. Una señal lanzada puede ser captada varias veces por diferentes eventos de captura de señales
-org.kie.workbench.common.stunner.bpmn.definition.IntermediateLinkEventThrowing.title=Error intermedio
+org.kie.workbench.common.stunner.bpmn.definition.IntermediateLinkEventThrowing.title=Enlace intermedio
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateLinkEventThrowing.description=Un evento de enlace es un mecanismo para conectar dos secciones de un proceso. Los eventos de enlace pueden utilizarse para crear situaciones de bucle o para evitar largas líneas de flujo de secuencia
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateMessageEventThrowing.title=Mensaje intermedio
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateMessageEventThrowing.description=El evento de lanzamiento de señales emite un mensaje
@@ -136,7 +136,7 @@ org.kie.workbench.common.stunner.bpmn.definition.IntermediateEscalationEventThro
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateCompensationEventThrowing.title=Compensación intermedia
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateCompensationEventThrowing.description=Este evento activa una compensación
 org.kie.workbench.common.stunner.bpmn.definition.Lane.title=Línea
-org.kie.workbench.common.stunner.bpmn.definition.Lane.description=Los grupos y las líneas representan las responsabilidades de las actividades de un proceso. Un conjunto (pool) o una línea pueden ser una organización, una función o un sistema. Las líneas subdividen los conjuntos (pools) u otras líneas de forma jerárquica.
+org.kie.workbench.common.stunner.bpmn.definition.Lane.description=Los grupos y las líneas representan las responsabilidades de las actividades de un proceso. Un conjunto (pool) o una línea pueden ser una organización, una función o un sistema. Los carriles subdividen jerárquicamente las piscinas u otros carriles
 org.kie.workbench.common.stunner.bpmn.definition.TextAnnotation.title=Anotación de texto
 org.kie.workbench.common.stunner.bpmn.definition.TextAnnotation.description=Anotación de texto
 org.kie.workbench.common.stunner.bpmn.definition.DataObject.title=Objeto de datos
@@ -212,7 +212,7 @@ org.kie.workbench.common.stunner.bpmn.definition.property.diagram.ProcessInstanc
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.Version.label=Versión
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.Version.description=La versión del proceso
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.GlobalVariables.label=Variables globales
-org.kie.workbench.common.stunner.bpmn.definition.property.diagram.MetaDataAttributes.label=Metadata Attributes
+org.kie.workbench.common.stunner.bpmn.definition.property.diagram.MetaDataAttributes.label=Atributos de los metadatos
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.GlobalVariables.description=Esta propiedad se usa para declarar variables con alcance global.
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.imports.Imports.label=Importaciones
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.imports.Imports.description=Las importaciones.
@@ -306,7 +306,7 @@ org.kie.workbench.common.stunner.bpmn.definition.property.event.message.MessageR
 # LinkEventExecutionSets
 #######################
 org.kie.workbench.common.stunner.bpmn.definition.property.event.link.LinkEventExecutionSet.label=Implementación/Ejecución
-org.kie.workbench.common.stunner.bpmn.definition.property.event.link.LinkRef.label=Enlace:
+org.kie.workbench.common.stunner.bpmn.definition.property.event.link.LinkRef.label=Enlace
 org.kie.workbench.common.stunner.bpmn.definition.property.event.link.LinkRef.description=La referencia del enlace
 org.kie.workbench.common.stunner.bpmn.definition.property.event.link.LinkRef.helpMessage=Proporcionar el nombre del enlace para crear un acceso directo en el proceso
 
@@ -477,7 +477,7 @@ org.kie.workbench.common.stunner.bpmn.definition.property.variables.ProcessVaria
 VariablesEditorWidget.Name=Nombre
 VariablesEditorWidget.DataType=Tipo de datos
 VariablesEditorWidget.Tags=Etiquetas <i class="fa-info-circle" title="Añadir etiquetas predefinidas o personalizadas a las variables"/>
-VariablesEditorWidget.TagsX=Nombre de la variable
+VariablesEditorWidget.TagsX=Etiquetas variables
 
 #######################
 # AdvancedData
@@ -526,7 +526,7 @@ org.kie.workbench.common.stunner.bpmn.client.dataproviders.RuleLanguageProvider.
 TimerSettingsFieldEditorView.TimeDuration=Ejecutar una vez después de la duración
 TimerSettingsFieldEditorView.TimeDuration_Placeholder=valor de la duración o una expresión #{expression}
 TimerSettingsFieldEditorView.DurationTimer_Help_Header=La duración del temporizador debe ser
-TimerSettingsFieldEditorView.DurationTimer_Help_Line_1=una duración ISO-8601 en el formato "PnDTnHnMnS", por ejemplo P2DT1H, PT1H15M
+TimerSettingsFieldEditorView.DurationTimer_Help_Line_1=una duración ISO-8601 en el formato "P[nYnMnWnD][TnHnMnS]", por ejemplo P2DT1H, PT1H15M
 
 TimerSettingsFieldEditorView.Expression_Help_Line=una expresión como #{expression}, por ej., #{my_process_variable}
 
@@ -619,8 +619,8 @@ VariableSearchService.CaseVariableLabelPrefix=(variable de caso)
 #######################
 # Custom Tasks / WID
 #######################
-customTasks.title=Tipo personalizado
-customTasks.description=Tipo personalizado
+customTasks.title=Tareas personalizadas
+customTasks.description=Tareas personalizadas
 #########################
 # Constants
 #########################
@@ -631,8 +631,8 @@ assignee.cannotBeEmpty=El nombre no puede estar vacío
 assignee.searchError=Se produjo un error durante la solicitud de búsqueda de información del usuario. {0}
 notification.label=Notificación
 notifications.label=Notificaciones
-notification.toUsers=A los usuarios
-notification.toGroups=A los grupos
+notification.toUsers=Para: usuario(s)
+notification.toGroups=Para: grupo(s)
 notification.toEmails=Para: correo(s) electrónico(s)
 notification.from=Desde
 notification.body=Cuerpo
