--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants_es.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants_es.properties
@@ -31,11 +31,11 @@ Data_Output_and_Assignment=Salida y asignación de datos
 Data_Outputs_and_Assignments=Salidas y asignaciones de datos
 Data_IO=E/S de datos
 Edit=Editar
-Enter_expression=Modificar expresión
+Enter_expression=Introduzca la expresión
 Enter_type=Ingresar el tipo
 Error_retrieving_datatypes=Error en la recuperación de los tipos de datos
 Invalid_character_in_name=Carácter no válido en el nombre
-Invalid_character_in_value=Carácter no válido en el nombre
+Invalid_character_in_value=Carácter no válido en el valor
 Name=Nombre
 No_Data_Input=no hay entrada de datos
 No_Data_Output=no hay salida de datos
@@ -47,14 +47,14 @@ Target=Destino
 assignment_target_help=El objetivo de la variable de salida puede ser una variable o una expresión.
 This_input_should_be_entered_as_a_property_for_the_task=Esta entrada debe ingresarse como una propiedad para la tarea
 Removed_invalid_characters_from_name=Quitó los caracteres no válidos del nombre
-Removed_invalid_characters_from_value=Quitó los caracteres no válidos del nombre
+Removed_invalid_characters_from_value=Se han eliminado los caracteres no válidos del valor
 A_Data_Input_with_this_name_already_exists=Ya existe una entrada de datos con este nombre
 ProcessModel=Modelo de proceso
 ConfirmCloseBusinessProcessEditor=El proceso comercial puede contener cambios no guardados. ¿Está seguro de que desea cerrar el editor?
 DeleteDiagramVariableError=No se puede eliminar esta variable de proceso porque se usa en una o más tareas u otros nodos de proceso. Para eliminar la variable, elimine primero las variables de asignación de tareas o cualquier otro uso en los nodos de proceso.
 RenameDiagramVariableError=No se puede renombrar esta variable de proceso porque se usa en una o más tareas u otros nodos de proceso. Para renombrar la variable, elimine primero las variables de asignación de tareas o cualquier otro uso en los nodos de proceso.
 DuplicatedVariableNameError=Ya existe una variable con este nombre: {0}
-DuplicatedAttributeNameError=Ya existe una variable con este nombre: {0}
+DuplicatedAttributeNameError=Ya existe un atributo con este nombre: {0}
 AssignmentNameAlreadyInUseAsMultipleInstanceInputOutputVariable=El nombre de la asignación: {0} ya está en uso como entrada o salida de datos de múltiples instancias en el nodo actual.
 Imports=Importaciones
 No_Imports=No hay importaciones
@@ -77,8 +77,8 @@ Language=Lenguaje
 replyToOptional=Responder a (opcional)
 replyToMessage=Un usuario o grupo opcional que debe recibir respuestas a la notificación.
 message=Mensaje
-toUsers=A los usuarios
-toGroups=A los grupos
+toUsers=Para: usuario(s)
+toGroups=Para: grupo(s)
 toEmails=Para: correo(s) electrónico(s)
 subjectPlaceholder=Introduzca el asunto aquí.
 emailsPlaceholder=Introduzca los correos electrónicos separados por comas.
@@ -90,12 +90,12 @@ taskExpirationDefinition=Definición de la expiración de la tarea
 notificationPopover=Esta definición de tiempo determina cuándo se producirá la notificación.
 notifyLabel=Notificar a
 notifyAfter=Notificar después de la expiración de la tarea
-notificationRepeat=Notificación
+notificationRepeat=Repetición de la notificación
 notifyEvery=Notificar a cada
 until=Hasta
 expressionTextArea=Ejemplo de notación de expresión básica para un intervalo: P2y10M14dT20h13m
 taskStateChangesLabel=Cambios en el estado de la tarea
 repeatCountReachesLabel=La repetición del recuento alcanza
-syntaxRequirement=Para conocer los requisitos sintácticos de las expresiones ISO 8601, consulte https://www.iso.org/
+syntaxRequirement=Para conocer los requisitos de sintaxis de las expresiones ISO 8601, consulte https://www.iso.org/
 incorrectEmail=Uno de los correos electrónicos tiene un valor no válido:
 
