Add Italian translations for various resources

--- a/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants.properties
+++ b/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants.properties
@@ -114,6 +114,7 @@ French=French
 Japanese=Japanese
 Spanish=Spanish
 English=English
+Italian=Italian
 ResetPerspectivesTooltip=Reset all Page layouts
 PromptResetPerspectives=Are you sure you want to reset all Page layouts?
 Workbench_Settings=Workbench Settings
