--- a/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_de.properties
+++ b/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_de.properties
@@ -222,6 +222,7 @@ Japanese=Japanisch
 ChineseSimplified=Chinesisch (Vereinfacht)
 Spanish=Spanisch
 Portuguese=Portugiesisch
+Italian=Italienisch
 English=Englisch
 Workbench_Settings=Workbench Einstellungen
 Advanced=Fortgeschritten
