--- a/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_es.properties
+++ b/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_es.properties
@@ -113,6 +113,7 @@ Language=Lenguaje
 French=Francés
 Japanese=Japonés
 Spanish=Español
+Italian=Italiano
 English=Inglés
 ResetPerspectivesTooltip=Restablecer todos los diseños de página
 PromptResetPerspectives=¿Está seguro de que desea restablecer todos los diseños de página?
