--- a/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_fr.properties
+++ b/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_fr.properties
@@ -113,6 +113,7 @@ Language=Langage
 French=Français
 Japanese=Japonais
 Spanish=Espagnol
+Italian=Italien
 English=Anglais
 ResetPerspectivesTooltip=Réinitialiser toutes les mises en page
 PromptResetPerspectives=Voulez-vous vraiment réinitialiser toutes les mises en page ?
