--- a/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_ja.properties
+++ b/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_ja.properties
@@ -113,6 +113,7 @@ Language=言語
 French=フランス語
 Japanese=日本語
 Spanish=スペイン語
+Italian=イタリア語
 English=英語
 ResetPerspectivesTooltip=すべてのページレイアウトをリセット
 PromptResetPerspectives=本当にすべてのページレイアウトをリセットしてもよろしいですか?
