--- a/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_pt_BR.properties
+++ b/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_pt_BR.properties
@@ -222,6 +222,7 @@ Japanese=Japonês
 ChineseSimplified=Chinês (Simplificado) 
 Spanish=Espanhol
 Portuguese=Português
+Italian=Italiano
 English=Inglês
 Workbench_Settings=Configurações do Workbench
 Advanced=Avançado
