--- a/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_zh_CN.properties
+++ b/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_zh_CN.properties
@@ -222,6 +222,7 @@ Japanese=日语
 ChineseSimplified=中文（简体）
 Spanish=西班牙语
 Portuguese=葡萄牙语
+Italian=意大利语
 English=英语
 Workbench_Settings=工作台设置
 Advanced=高级的
